tests/ui/readme.stderr
error[E0038]: the trait `MyTrait` cannot be made into an object
 --> tests/ui/readme.rs:8:12
  |
8 |     let _: &dyn MyTrait;
  |            ^^^^^^^^^^^^ `MyTrait` cannot be made into an object
  |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
 --> $RUST/core/src/hash/mod.rs
  |
  |     fn hash<H: Hasher>(&self, state: &mut H);
  |        ^^^^ ...because method `hash` has generic type parameters
  |
 ::: tests/ui/readme.rs:3:7
  |
3 | trait MyTrait: Hash {
  |       ------- this trait cannot be made into an object...
  = help: consider moving `hash` to another trait
